<resources>
    <string name="app_name">GrieSol</string>
    <string name="title_activity_sample">sample</string>
    <string name="title_activity_login">LoginActivity</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="roll">Roll No</string>
    <string name="email_verification_message">We have sent a verification code on your email. Enter the code here to verify the email and login.</string>
    <string name="verify_email"><u>Verify Email To Login</u></string>
</resources>